OpenLDAP 2.2 Change Log

OpenLDAP 2.2.12 Engineering
	Fixed slapd set acl recursion (ITS#3140)
	Fixed slapd first component bug (ITS#3118)
	Fixed slapd TOLOWER macro use bug (ITS#3115)
	Fixed slapd TLS context clash bug (ITS#3109)
	Build Environment
		Fixed liblber memory debug portability bug (ITS#3116)
		Fixed back-perl perl portability bug (ITS#2554,2946)

OpenLDAP 2.2.11 Release
	Fixed slapd undefined objectclass bug (ITS#3097)
	Fixed slapd acl dn="" bug
	Updated slapd limits handling
	Build Environment
		Fixed MacOSX sl_free interop bug (ITS#3092)
		Fixed libtool -static bug
		Added Berkeley DB mismatch check

OpenLDAP 2.2.10 Release
	Build Environment
		Fix configure bug (ITS#3094)

OpenLDAP 2.2.9 Release
	Fixed slapd syncrepl replication bugs (ITS#3055,3056,3069)
	Fixed slapd slurpd update bugs
	Fixed slapd inappropriate bind error disclosure bugs
	Fixed slapd sun_path portability bug
	Fixed slapd passwd referral memory leak
	Fixed slapd sasl userdb checkpass bug (ITS#3048)
	Fixed slapd duplicate value detection (ITS#3066)
	Fixed slapd permissive modify control (ITS#3068)
	Fixed slapd updateref handling
	Fixed slapd saslauthz subtree scope bug (ITS#3077)
	Fixed back-bdb paged results bug (ITS#3076)
	Fixed back-bdb "" suffix bug (ITS#3063)
	Fixed back-bdb/hdb/ldbm approx w/o index bug (ITS#3062)
	Fixed back-meta compare return code (ITS#3042)
	Fixed back-ldbm IDL delete bug (ITS#3046)
	Fixed back-ldbm modrdn indexing bug (ITS#3059)
	Fixed libldap parse_oid core dump bug (ITS#3065)
	Fixed ldapmodify missing error information bug (ITS#3057)
	Fixed ldapsearch paged results error handling
	Updated slapd limits handling
	Updated slapd overlay framework
	Added slapd Delivery Method syntax validation (ITS#3052)
	Added libldap ditContentRule oidMacro support (ITS#2920)
	Removed lint
	Build Environment
		Fixed slapd dynamic backend build (ITS#3044)
		Fixed slaptools DESTDIR handling (ITS#3070)
		Removed deprecated configure options